[project]
name = "cuisine_mechanics_api_client"
version = "0.0.1"
authors = [
  { name="Steven Griffin", email="anaxaganous@gmail.com" },
]
description = "A client for the Cuisine Mechanics REST API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pytest",
    "requests==2.31.0"
]

[project.urls]
Homepage = "https://github.com/anaxaganous/cuisine_mechanics_api_client"
Issues = "https://github.com/anaxaganous/cuisine_mechanics_api_client/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
